--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,54 @@
-/*  your css code here. If applicable */
+body{
+        margin: 0;
+        padding: 0;
+        background-color : #f5f5f5
+      }
+      /* header-section */
+     .header{
+      background-color: #011e29;
+      text-align: center;
+      padding: 12px;
+      color: white;
+     }
+     .container{
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+     }
+     /* latest-news-section */
+     .latest-news-section{
+      background-color: white;
+      width: 20%;
+      max-height: 120px;
+      padding: 20px;
+      margin-left: 41px;
+      border-radius: 18px;
+     }
+     .latest-news-section ul li a{
+      margin-left: 42px;
+      text-decoration: none;
+      color: black;
+     }
+     /* main-section */
+     .main-article{
+      background-color: white;
+      width: 20%;
+      max-height: 50%;
+      padding: 20px;
+     }
+     .main-para{
+      width: 90%;
+		 max-height:400px;
+     }
+     /* pictorial-news-section- */
+     .pictorial-news-section{
+      background-color: white;
+      width: 10%;
+      max-height: 600px;
+      padding: 20px;
+      margin-right: 94px;
+     }
+     .pictorial-news-section img{
+        width: 90%;
+		 
+     }
