--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body{
         background-color : #f5f5f5
       }
       /* header-section */
-     .header{
+     header{
       background-color: #011e29;
       text-align: center;
       padding: 12px;
@@ -35,6 +35,7 @@ body{
       width: 20%;
       max-height: 50%;
       padding: 20px;
+	  border-radius:18px;
      }
      .main-para{
       width: 90%;
@@ -47,6 +48,8 @@ body{
       max-height: 600px;
       padding: 20px;
       margin-right: 94px;
+	  border-radius:18px;
+	  text-align:end;
      }
      .pictorial-news-section img{
         width: 90%;
